[workspace]
members = [
    "crates/bitcoin"
]

[package]
name = "bitcoin-rpc"
version = "0.1.0"
authors = ["ahmadashraf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.13.0"
log = "0.4.14"
hex = "0.4.3"
serde_json = "1.0.68"
bitcoin_hashes = "0.10.0"

[dependencies.bitcoin]
path = "crates/bitcoin"
